fixed z-index of wkshopCtrl to not overlap menuOverlay

--- a/dev/scss/components/_wkshop.scss
+++ b/dev/scss/components/_wkshop.scss
@@ -37,7 +37,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 99;
+  z-index: 40;
   width: 100%;
   height: 1px;
   @include clearfix();
